# forecasting-agent

./: .gitignore  README.md  algorithm_chooser.py  all_models.csv  arima_automated.py  delete_algorithm_chooser.py  delete_arima_automated.py  dp.py  ets_automated.py  forecast.py  models.csv  pyproject.toml  ses  theta_automated.py  vis.py
scripts/: algorithm_chooser_parametric.py  arima.py  eda.py  ets.py  naive.py  theta.py  theta_tet.py
src/forecast_agent/: __init__.py  algorithm_chooser.py  arima.py  arima_automated.py  croston.py  ets.py  ets_automated.py  eval.py  ses.py  theta.py  theta_automated.py  train_test.py
