[project]
name = "forecast-agent"
dynamic = ["version"]
description = "Time-series forecasting algorithm chooser helpers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
dependencies = []

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
